delete the <style>

--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
   <link rel="icon" href="./img/website-brand.webp">
   <title>Mundo deporte</title>
 </head>
-<style>
-  a {
-    text-decoration: none;
-    color: #000;
-  }
 
-  a:hover {
-    color: #000;
-  }
-</style>
 
 <body>
   <nav class="navbar sticky-top bg-dark">
@@ -40,7 +31,7 @@
       <h1>Post destacados</h1>
       <div class="row">
         <div class="col-12 col-md-6 my-2">
-          <a href="football.html">
+          <a class="text-decoration-none text-dark" href="football.html">
             <article class="card">
               <img loading="lazy" src="./img/football.webp" alt="a football ball">
               <section class="card-body">
@@ -62,7 +53,7 @@
           </a>
         </div>
         <div class="col-12 col-md-6 my-2">
-          <a href="swimming.html">
+          <a class="text-decoration-none text-dark" href="swimming.html">
             <article class="card">
               <img loading="lazy" src="./img/swimming.webp" alt="a person swimming">
               <section class="card-body">
@@ -89,7 +80,7 @@
       <h2>Categorias</h2>
       <div class="row">
         <div class="col-7 my-2">
-          <a href="./hiking.html">
+          <a class="text-decoration-none text-dark" href="./hiking.html">
             <article class="card">
               <img loading="lazy" src="./img/hiking.webp" alt="a people hiking">
               <section class="card-body">
@@ -112,7 +103,7 @@
         <div class="col-5 my-2">
           <div class="row">
             <div class="col-12">
-              <a class="" href="cycling.html">
+              <a class="text-decoration-none text-dark" href="cycling.html">
                 <article class="card">
                   <img loading="lazy" src="./img/cycling.webp" alt="a bycicle">
                   <section class="card-body">
@@ -135,7 +126,7 @@
           </div>
           <div class="row">
             <div class="col-12 my-2">
-              <a href="yoga.html">
+              <a class="text-decoration-none text-dark" href="yoga.html">
                 <article class="card">
                   <img loading="lazy" src="./img/yoga.webp" alt="a person meditating">
                   <section class="card-body">
@@ -163,12 +154,14 @@
     <div class="container-fluid">
       <div class="d-flex">
         <section class="website-brand">
-          <a class="footer-brand" href="#">
+          <a class="text-decoration-none text-dark" class="footer-brand" href="index.html">
             <img src="./img/website-brand.webp" alt="website-brand">
           </a>
         </section>
         <section class="rrss">
-          <a href="./rss/index.rss"><i class="fa-solid fa-rss fa-xl mx-4" style="color: #ffae00;"></i></a>
+          <a class="text-decoration-none text-dark" href="./rss/index.rss">
+            <i class="fa-solid fa-rss fa-xl mx-4 text-warning-emphasis"></i>
+          </a>
         </section>
         <section class="copyrigth">
           <h1>© El Blog de Nico 2024.Todos los derechos reservados</h1>
