--- a/index.html
+++ b/index.html
@@ -148,13 +148,14 @@
             </div>
           </div>
         </div>
+      </div>
     </section>
   </div>
   <footer class="footer bg-dark">
     <div class="container-fluid">
       <div class="d-flex">
         <section class="website-brand">
-          <a class="text-decoration-none text-dark" class="footer-brand" href="index.html">
+          <a class="footer-brand text-decoration-none text-dark" href="index.html">
             <img src="./img/website-brand.webp" alt="website-brand">
           </a>
         </section>
