--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/42f771bafc.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="./img/website-brand.webp">
+  <link rel="icon" href="./img/website-brand.png">
   <title>Mundo deporte</title>
 </head>
-
 
 <body>
   <nav class="navbar sticky-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./img/website-brand.webp" alt="website-brand"></a>
+      <a class="navbar-brand" href="#"><img src="./img/website-brand.png" alt="website-brand"></a>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-danger" type="submit">Buscar</button>
-        <a href="./rss/index.rss"><i class="fa-solid fa-rss fa-xl mx-4" style="color: #ffae00;"></i></a>
+        <a href="./rss/index.rss"><i class="fa-solid fa-rss fa-xl mx-4 text-warning"></i></a>
       </form>
     </div>
   </nav>
@@ -156,16 +155,16 @@
       <div class="d-flex">
         <section class="website-brand">
           <a class="footer-brand text-decoration-none text-dark" href="index.html">
-            <img src="./img/website-brand.webp" alt="website-brand">
+            <img src="./img/website-brand.png" alt="website-brand">
           </a>
         </section>
         <section class="rrss">
-          <a class="text-decoration-none text-dark" href="./rss/index.rss">
-            <i class="fa-solid fa-rss fa-xl mx-4 text-warning-emphasis"></i>
+          <a class="text-decoration-none text-warning" href="./rss/index.rss">
+            <i class="fa-solid fa-rss fa-xl mx-4 text-warning" style="width: 69px; height: 64px;"></i>
           </a>
         </section>
-        <section class="copyrigth">
-          <h1>© El Blog de Nico 2024.Todos los derechos reservados</h1>
+        <section class="copyrigth w-50 h-50">
+          <p class="text-warning fs-50 w-50 h-50">© El Blog de Nico 2024.Todos los derechos reservados</>
         </section>
       </div>
     </div>
