--- a/swimming.html
+++ b/swimming.html
@@ -10,14 +10,14 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/42f771bafc.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="./img/website-brand.webp">
+  <link rel="icon" href="./img/website-brand.png">
   <title>Mundo deporte - 🏊‍♀️ Mejora tus estilos de natación con estos consejos 🏊‍♂️</title>
 </head>
 
 <body style="background-color: #7f7f7f26;">
   <nav class="navbar sticky-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="./img/website-brand.webp" alt="website-brand"></a>
+      <a class="navbar-brand" href="index.html"><img src="./img/website-brand.png" alt="website-brand"></a>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-danger" type="submit">Buscar</button>
